--- a/UnityProject/Assets/Editor/PhysXExport/Plugins/PxSerialization.bundle/Contents/Info.plist
+++ b/UnityProject/Assets/Editor/PhysXExport/Plugins/PxSerialization.bundle/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>16E195</string>
+	<string>21A559</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,17 +27,21 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>8E3004b</string>
+	<string>13C100</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>12.1</string>
 	<key>DTSDKBuild</key>
-	<string>16E185</string>
+	<string>21C46</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx12.1</string>
 	<key>DTXcode</key>
-	<string>0833</string>
+	<string>1321</string>
 	<key>DTXcodeBuild</key>
-	<string>8E3004b</string>
+	<string>13C100</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.12</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016年 com.TN. All rights reserved.</string>
 </dict>
